Fix notes list incorrect size on small desktops

--- a/src/scss/components/note/_pane.scss
+++ b/src/scss/components/note/_pane.scss
@@ -36,7 +36,7 @@
 	.scroll-container-mouse {
 		display: flex;
 		flex-direction: column;
-		@include mouse-and-bp-up(md) {
+		@include mouse-and-bp-up(lg) {
 			flex: 1 0 0;
 			min-height: 62px;
 			max-height: 62px * 3;
